--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jest": "26.6.3",
     "msw": "0.29.0",
     "nodemon": "2.0.7",
-    "webpack": "5.40.0",
+    "webpack": "^5.40.0",
     "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2"
   },
